crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__codex__permission-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: ~
    detail: ~
- ModelInfo:
    agent_id: 13864919756395911276
    model: gpt-5.6-sol
    effort: max
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: ~
    detail:
      Generic:
        display: exec
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: ~
    detail: ~
- Usage:
    agent_id: 13864919756395911276
    fresh_tokens: 7849
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: ~
    detail:
      Generic:
        display: exec
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: ~
    detail: ~
- Usage:
    agent_id: 13864919756395911276
    fresh_tokens: 7864
- Usage:
    agent_id: 13864919756395911276
    fresh_tokens: 912
- ActivityEnd:
    agent_id: 13864919756395911276
    tool_use_id: ~
- SessionStart:
    agent_id: 13864919756395911276
    source: codex
    session_id: 01a0059b-cb9d-7a92-8821-85ebb7604464
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 13864919756395911276
    model: gpt-5.6-sol
    effort: ~
- SessionStart:
    agent_id: 13864919756395911276
    source: codex
    session_id: 01a0059b-cb9d-7a92-8821-85ebb7604464
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 13864919756395911276
    source: codex
    session_id: 01a0059b-cb9d-7a92-8821-85ebb7604464
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 13864919756395911276
    tool_use_id: exec-04a83981-248a-4852-97e2-c07ceab3bbdb
    detail:
      Generic:
        display: "Bash: rm -- NOTE.txt && test ! -e NOTE.txt"
- Identity:
    agent_id: 13864919756395911276
    source: codex
    session_id: 01a0059b-cb9d-7a92-8821-85ebb7604464
    cwd: /private/tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 13864919756395911276
    reason: permission
- Identity:
    agent_id: 13864919756395911276
    source: codex
    session_id: 01a0059b-cb9d-7a92-8821-85ebb7604464
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 13864919756395911276
    tool_use_id: exec-04a83981-248a-4852-97e2-c07ceab3bbdb
- ActivityEnd:
    agent_id: 13864919756395911276
    tool_use_id: ~
- SessionEnd:
    agent_id: 13864919756395911276
    as_child: false
